kubernetes/apps/home/frigate/app/httproute.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: frigate
spec:
  hostnames: ["frigate.judahrand.net"]
  parentRefs:
    - name: envoy-external
      namespace: network
  rules:
    - backendRefs:
        - name: frigate
          namespace: home
          port: 8971
